Comment avatar fixed on IE 11

--- a/src/styles/components/_comments.scss
+++ b/src/styles/components/_comments.scss
@@ -16,6 +16,11 @@
 
 .comment-avatar {
     flex: 0 0 48px;
+    img {
+        // dimensions needed on IE 11
+        height: 64px;
+        width: 64px;
+    }
 }
 
 .comment-content {
